--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>综合娱乐</title>
   </head>
   <body>
